--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<!-- END - TOP HEADER -->
 
 	<!-- TOP NAV -->
-    <div class="navbar navbar-default">
+    <div class="navbar">
       <div class="container">
         <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
             <span class="icon-bar"></span>  
