Centered social media icons.

--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
-   
+
 	<!-- TOP HEADER -->
+    <!--#include "ssi/top-header.ssi"-->
     <div class="container header">
 		<div class="row">
             <div class="col-lg-6">
-              <p><img src="img/main-header-lt.jpg" align="left" border=0 width="100%"/></p>
+              <p><img src="img/main-header-lt.jpg" align="left" border=0 width="490"/></p>
             </div>
-            <div class="col-lg-6" align="right">
+            <div class="col-lg-6 " align="right">
                 <p class="phone">1.866.673.3036</p>
             </div>
 		</div>
@@ -59,10 +60,10 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#buyers">Buyer's Guide</a></li>
             <li><a href="#basics">Pearl Basics</a></li>
-            <li><a href="#basics">Our Guarantee</a></li>
-            <li><a href="#basics">Testimonials</a></li>
-            <li><a href="#basics">Shipping</a></li>
-            <li><a href="#basics">Contact US</a></li>
+            <li><a href="#guarantee">Our Guarantee</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#shipping">Shipping</a></li>
+            <li><a href="#contact">Contact US</a></li>
 
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Articles<b class="caret"></b></a>
@@ -209,7 +210,7 @@
         <div class="col-xs-2">
 			<p align="center"><br><a href="https://store.nexternal.com/pearl/storefront/login.aspx?Target=orderinfo.aspx"><img src="img/Shopping-Cart.jpg" width="100%" height="28" border="0"></a><br><br></p>
 
-			<p>
+			<p align="center">
 				<a class="webicon googleplus " href="https://plus.google.com/116946886168624937127/posts">Google+</a>
 			    <a class="webicon facebook " href="http://www.facebook.com/pages/The-Pearl-Outlet/222292886437">Facebook</a>
 				<a class="webicon twitter " href="http://twitter.com/thepearloutlet">Twitter</a>
