Added Monthly Special

--- a/index.html
+++ b/index.html
@@ -230,13 +230,23 @@
 			
 <!-- I need a cool way to do a monthly special here on my home page...	-->	
 			<div class="col-xs-5">
-			<p>
-			Monthly Special! Monthly Special! Monthly Special! Monthly Special! Monthly Special! Monthly Special! Monthly Special! Monthly Special! Monthly Special! Monthly Special! Monthly Special! 
-			Monthly Special! Monthly Special! Monthly Special! Monthly Special! Monthly Special! 
-			</p>
+                <p class="monthly-special-title">Monthly Special!</p>
+                <p align="center">
+                <a href="http://store.thepearloutlet.com/sale-south-sea-saltwater-pearl-pendant-baroque-p395.aspx">
+                    <img src="http://cdn.nexternal.com/pearl/images/SSPBQ-OCT-LG.jpg" alt="Southsea Pendant" height="150" width="150" border=0/>
+                </a>
+                </p>
+                <p class="monthly-special-text">
+                    <a href="">
+                        South Sea Pendant<br>
+                        14mm-16mm
+                    </a><br><br>
+                    <span class="monthly-special-retail"><del>Retail: $600</del></span><br>
+                    <span class="monthly-special-price"><b>Sale Price: $200</b></span>
+                </p>
 			</div>
 		  </div>
-	  
+
 		</div>
 		<!-- END - CENTER -->
 		
