Fixed the accordion and some additional formatting.

--- a/index.html
+++ b/index.html
@@ -161,44 +161,56 @@
 			
 		<!--<img src="img/index_main_pearls.jpg" width="100%"/>-->
 
-		  <div class="heading1"><h1>Pearl Jewelry</h1></div>
-		  <p>
-		  Pearls are our passion, and it shows! Whether you're looking for the perfect gift for a loved one or something extra special just for you, we are dedicated to helping you find
-		  that perfect piece. And our service and dedication don't stop there. Every item is shipped on-time, packaged beautifully in its own gift-worthy presentation box and includes an appraisal.
-		  <br>
-		  <br>
-		  But what about after the sale? We back all of our items with an unconditional two month satisfaction guarantee. And if a piece needs restringing, we've got you covered. We have our own in-house stringers
-		  and we'll restring your item for free for the first year or for a minimal fee any time after that.
-		  </p>
-		  <div class="subheading1"><h2>Pearl Earrings</h2></div>
-		  <p>
-		  Pearl earrings are by far the most popular jewelry accessories. If you don't yet own any pearls, these should be one of your first purchases. You'll want to first educate yourself in the different
-		  varieties, qualities, sizes, and colors of pearls available in order to make your first purchase an exciting and memorable experience. You will want to visit our <a href="#">Buyer's Guide</a> and our educational
-		  <a href="#">Pearl Basics</a> sections for a vast wealth of knowledge and information.
+		<div class="heading1"><h1>Pearl Jewelry</h1></div>
+
+		<p>Pearls are our passion, and it shows! Whether you're looking for the perfect gift for a loved one or something extra special just for you, we are dedicated to helping you find that perfect piece. And our service and dedication don't stop there. Every item is shipped on-time, packaged beautifully in its own gift-worthy presentation box and includes an appraisal.</p>
+
+		<p>But what about after the sale? We back all of our items with an unconditional two month satisfaction guarantee. And if a piece needs restringing, we've got you covered. We have our own in-house stringers and we'll restring your item for free for the first year or for a minimal fee any time after that.</p>
+
+		<div class="subheading1"><h2>Pearl Earrings</h2></div>
+
+		<p>Pearl earrings are by far the most popular jewelry accessories. If you don't yet own any pearls, these should be one of your first purchases. You'll want to first educate yourself in the different varieties, qualities, sizes, and colors of pearls available in order to make your first purchase an exciting and memorable experience. You will want to visit our <a href="#">Buyer's Guide</a> and our educational <a href="#">Pearl Basics</a> sections for a vast wealth of knowledge and information.</p>
 		  
-<!-- ACCORDIAN TEST - RIGHT NOW I CAN'T MAKE THIS WORK... but my thoughts are that I can have more h2 or h3 tags here for search engines and put information about pearl types here...
-		<section id="accordion">
+		<section class="panel-group" id="accordion">
 			<div class="page-header">
-				<p>Types of Pearls</p>
+				<h2>Types of Pearls</h2>
 			</div>
-			<div id="menu-collapse">
-				<div>
-					<h3>Akoya</h3>
-					<div>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</div>
-				</div>
-				<div>
-					<h3>Freshwater</h3>
-					<div>Phasellus mattis tincidunt nibh.</div>
-				</div>
-				<div>
-					<h3>Tahitian</h3>
-					<div>Nam dui erat, auctor a, dignissim quis.</div>
-				</div>
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#Akoya">Akoya</a></h3>
+				</div> <!-- .panel-heading -->
+				<div id="Akoya" class="panel-collapse collapse in">
+					<div class="panel-body">
+						Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.
+					</div> <!-- .panel-body -->
+				</div> <!-- #Akoya -->
+			</div> <!-- .panel .panel-default -->
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#Freshwater">Freshwater</a></h3>
+				</div> <!-- .panel-heading -->
+				<div id="Freshwater" class="panel-collapse collapse">
+					<div class="panel-body">
+						Phasellus mattis tincidunt nibh.
+					</div> <!-- .panel-body -->
+				</div> <!-- #Freshwater -->
 			</div>
-		</section>
--->
-<!-- I need a signup form for my customers to sign up for our emails... -->
-		  <div class="row">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#Tahitian">Tahitian</a></h3>
+				</div> <!-- .panel-heading -->
+				<div id="Tahitian" class="panel-collapse collapse">
+					<div class="panel-body">
+						Nam dui erat, auctor a, dignissim quis.
+					</div>
+				</div>
+			</div> <!-- .panel .panel-default -->
+		</section> <!-- #accordion -->
+
+		<p>&nbsp;</p>
+
+		<!-- I need a signup form for my customers to sign up for our emails... -->
+		<div class="row">
 			<div class="col-xs-7">
 				<div class="jumbotron">
 					<p class="jumboheading">FREE!</p>
@@ -217,7 +229,7 @@
 			</div>
 			
 			
-<!-- I need a cool way to do a monthly special here on my home page... -->
+			<!-- I need a cool way to do a monthly special here on my home page... -->
 			<div class="col-xs-5">
 				<p class="monthly-special-title">Monthly Special!</p>
 				<p style="text-align: center;">
